--- a/Frontend/.gitignore
+++ b/Frontend/.gitignore
@@ -14,6 +14,7 @@
 /build
 
 # misc
+.vscode/
 .DS_Store
 *.pem
 
@@ -22,7 +23,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-#env files
+# env files
 .env*
 
 # vercel
@@ -31,6 +32,18 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-    
+
 # clerk configuration (can include secrets)
 /.clerk/
+
+# IDE
+.vscode/*
+!.vscode/settings.json
+!.vscode/extensions.json
+!.vscode/tasks.json
+.idea
+
+# OS
+.DS_Store
+Thumbs.db
+
