--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -6,13 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.9.3",
+    "next": "^15.1.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "next": "^15.1.0"
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
